# data-analysis-h26-npo-01

./: CLAUDE.md  analysis_report.ipynb  analysis_report_data04.ipynb  analysis_report_data06.ipynb  index.html  main.py  pyproject.toml
analysis_report/: charts.js  index.html  style.css
data/: rr.xlsx
data04/watcher5/: watcher1(1).xls  watcher1(2).xls  watcher1(3).xls  watcher1(4).xls  watcher1.xls  watcher2-1(1).xls  watcher2-1(2).xls  watcher2-1(3).xls  watcher2-1(4).xls  watcher2-1.xls  watcher2-2(1).xls  watcher2-2(2).xls  watcher2-2(3).xls  watcher2-2(4).xls  watcher2-2.xls  watcher2-3(1).xls  watcher2-3(2).xls  watcher2-3(3).xls  watcher2-3(4).xls  watcher2-3.xls  watcher2-4(1).xls  watcher2-4(2).xls  watcher2-4(3).xls  watcher2-4.xls  watcher2-5(1).xls  watcher2-5(2).xls  watcher2-5(3).xls  watcher2-5.xls  watcher2-6(1).xls  watcher2-6(2).xls  watcher2-6(3).xls  watcher2-6.xls  watcher2-7(1).xls  watcher2-7(2).xls  watcher2-7(3).xls  watcher2-7.xls  watcher3(1).xls  watcher3(2).xls  watcher3(3).xls  watcher3(4).xls  (+10 more)
data04/レポート/: report.md
data04/レポート/html_report/: index.html  script.js  style.css
data06/レポート/: report.md
data06/レポート/html_report/: index.html  script.js  style.css
