[project]
name = "data-claude"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "japanize-matplotlib>=1.1.3",
    "jupyterlab>=4.5.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
]
